# soqucoin

./: .gitignore  .gitleaks.toml  .gitmessage  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  COPYING  Dockerfile  IDE_ERROR_CHECKLIST.md  INSTALL.md  Makefile.am  README.md  RELEASE_NOTES_v1.0.0-rc1.md  SECURITY.md  autogen.sh  block_data.html  cloudflare_setup.md  configure.ac  configure~  fuzz_wrapper.py  generate_architecture.py  l7_dashboard.html  l7_proxy.py  overnight_suite.sh  project-structure.txt  proxy_logs_screenshot.txt  run_wallet_security_tests.sh  soqucoin_public_testnet.conf  soqucoin_testnet.conf  soqucoin_whitepaper.tex  start_l7_test.sh  stratum_proxy.py  stress_test.py  test_confidential_flow.sh  test_l7.sh  test_l7_confidential_mining.sh  test_miner.py  test_miner_swarm.py  tx_generator.py  verify_pq.sh
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.cpp  amount.h  attributes.h  auxpow.cpp  auxpow.h  base58.cpp  bech32.cpp  bech32.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  compat.h  compressor.h  core_read.cpp  core_write.cpp  dogecoin-fees.h  dogecoin.cpp  dogecoin.h  hash.cpp  httpserver.cpp  init.cpp  key.cpp  key.h  (+41 more)
src/bench/: bench.cpp  bench.h  bench_bitcoin.cpp  bench_bulletproofs.cpp  bench_latticefold.cpp  bench_pat.cpp  bench_soqucoin_blocks.cpp  ccoins_caching.cpp  dilithium.cpp
src/compat/: arm_acle_selector.h  byteswap.h  glibc_compat.cpp
src/consensus/: block_accumulator.cpp  block_accumulator.h  consensus.h  params.h  privacy.h  usdsoq.cpp  usdsoq.h
src/crypto/: Makefile.am  blake2b.cpp  blake2b.h  hmac_sha256.h  scrypt.cpp  scrypt.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha3.cpp  sha3.h  sha512.cpp  sha512.h
src/crypto/binius/: LICENSE  commitment.cpp  commitment.h  fold.h  packed_field.cpp  packed_field.h  proof.h  small_field.cpp  small_field.h  utils.h  verifier.cpp  verifier.h
src/crypto/binius64/: LICENSE  field.cpp  field.h
src/crypto/dilithium/: LICENSE  fips202.h  rounding.c  sign.c  sign.h
src/crypto/latticebp/: CMakeLists.txt  LICENSE  capi.cpp  capi.h  commitment.cpp  commitment.h  exports.txt  range_proof.cpp  range_proof.h  ring_signature.cpp  ring_signature.h  standalone_shim.cpp  stealth_address.cpp  stealth_address.h  test_capi.c  test_latticebp.cpp
src/crypto/latticefold/: LICENSE  verifier.cpp  verifier.h
src/crypto/pat/: LICENSE  logarithmic.cpp  logarithmic.h
src/crypto/sangria/: LICENSE  fold.cpp
src/pat/: LICENSE  keys.cpp  keys.h  large_scale_pat_benchmark.py  pat_benchmark.py  randombytes.cpp  types.h
src/pat/dilithium-ref/: LICENSE  sign.c  sign.h  wasm_entry.c
src/policy/: fees.h  policy.cpp  policy.h
src/primitives/: block.h  pureheader.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  importkeysdialog.cpp  importkeysdialog.h  intro.cpp  modaloverlay.cpp  openuridialog.cpp  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentserver.cpp  paymentserver.h  peerdialog.cpp  peerdialog.h  peertablemodel.cpp  peertablemodel.h  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendcoinsdialog.h  splashscreen.cpp  trafficgraphwidget.cpp  (+15 more)
src/qt/forms/: intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af.ts  bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_ca.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el.ts  bitcoin_en.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_ky.ts  (+33 more)
src/rpc/: auxcache.cpp  auxcache.h  auxpow.cpp  batch.cpp  blockchain.cpp  blockchain.h  client.cpp  mining.cpp  mining.h  misc.cpp  net.cpp  pat.cpp  privacy.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h  usdsoq.cpp
src/script/: interpreter.cpp  interpreter.h  ismine.cpp  script.cpp  script.h  script_error.cpp  script_error.h  sign.cpp  standard.cpp  standard.h
src/secp256k1/: README.md  configure  configure.ac  libsecp256k1.pc
src/support/: experimental.h  lockedpool.cpp
src/test/: addrman_tests.cpp  amount_tests.cpp  audit_tests.cpp  auxcache_tests.cpp  auxpow_tests.cpp  base58_tests.cpp  bctest.py  binius64_field_tests.cpp  binius_tests.cpp  bip32_tests.cpp  blake2b_tests.cpp  block_accumulator_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bulletproofs_tests.cpp  coins_tests.cpp  consensus_arch_tests.cpp  consensus_validation_tests.cpp  covenant_tests.cpp  ctxout_format_matrix_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  dilithium_keyhash_committed_tests.cpp  dilithium_keyhash_tests.cpp  freeze_registry_harness_tests.cpp  freeze_registry_tests.cpp  genesis_chainparams_tests.cpp  genesis_remine_tests.cpp  key_tests.cpp  keyhash_broadcast_tests.cpp  keyimage_tests.cpp  latticefold_tests.cpp  lightning_script_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pat_script_tests.cpp  (+23 more)
src/wallet/: coincontrol.h  rpcdump.cpp  rpcusdsoq.cpp  rpcusdsoq.h  rpcutil.cpp  rpcutil.h  rpcwallet.cpp  wallet.cpp  wallet.h  walletdb.cpp
src/zk/: bulletproofs.cpp  bulletproofs.h  bulletproofs.h.MOCK_BACKUP  rctTypes.h
src/zmq/: zmqnotificationinterface.h  zmqpublishnotifier.cpp
(+1665 files in other folders)
