
libbitcoin_crypto_a_SOURCES += \
  crypto/sha3.cpp \
  crypto/dilithium/poly.c \
  crypto/dilithium/polyvec.c \
  crypto/dilithium/packing.c \
  crypto/dilithium/sign.c \
  crypto/dilithium/symmetric.c \
  crypto/dilithium/ntt.c \
  crypto/dilithium/reduce.c \
  crypto/dilithium/rounding.c

libbitcoin_crypto_a_SOURCES += \\
  crypto/dilithium/poly.c \\
  crypto/dilithium/polyvec.c \\
  crypto/dilithium/packing.c \\
  crypto/dilithium/sign.c \\
  crypto/dilithium/symmetric.c \\
  crypto/dilithium/ntt.c \\
  crypto/dilithium/reduce.c \\
  crypto/dilithium/rounding.c

libbitcoin_crypto_a_SOURCES += \
  crypto/dilithium/poly.c \
  crypto/dilithium/polyvec.c \
  crypto/dilithium/packing.c \
  crypto/dilithium/sign.c \
  crypto/dilithium/symmetric.c \
  crypto/dilithium/ntt.c \
  crypto/dilithium/reduce.c \
  crypto/dilithium/rounding.c

libbitcoin_crypto_a_SOURCES += \
  crypto/dilithium/poly.c \
  crypto/dilithium/polyvec.c \
  crypto/dilithium/packing.c \
  crypto/dilithium/sign.c \
  crypto/dilithium/symmetric.c \
  crypto/dilithium/ntt.c \
  crypto/dilithium/reduce.c \
  crypto/dilithium/rounding.c

